# AgenticSpoons

./: .dockerignore  .gitignore  ADVANCED_FEATURES.md  ANALYTICS_DASHBOARD_README.md  API_DOCUMENTATION.md  ARCHITECTURE.md  BENCHMARKS.md  BLOOMBERG_FEATURES.md  BLOOMBERG_TERMINAL_GUIDE.md  CHANGELOG.md  COMPARISON.md  COMPLETE_DOCUMENTATION.md  CONTRACT_DEMO.txt  CONTRIBUTING.md  DEMO_CHECKLIST.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_README.md  Dockerfile  FINAL_SUBMISSION_CHECKLIST.md  HACKATHON_PITCH.md  INFRASTRUCTURE.md  ML_MODULE_README.md  NEO_ARCHITECTURE_VISUAL.md  NEO_COMPILATION_SUCCESS.md  NEO_IMPLEMENTATION_SUMMARY.md  NEO_INTEGRATION.md  NEO_INTEGRATION_GUIDE.py  NEO_QUICK_REFERENCE.md  PITCH.md  PRESENTATION_CHEAT_SHEET.md  QUICKSTART.md  QUICK_START_VISUAL.md  README.md  README_ADDITION.md  README_BLOOMBERG.md  README_HACKATHON.md  README_NEO_INTEGRATION.md  README_THEME_TOGGLE.md  REST_API.md  (+76 more)
agentspoons_sdk/: __init__.py  client.py
assets/: README.md
cpp_engine/: README.md  bindings.cpp  black_scholes.hpp  monte_carlo.hpp  setup.py  test_cpp_engine.py
data/: oracle_feeds.jsonl
deploy/: deploy_contract.ps1  deploy_contract.sh  run_hackathon_demo.ps1  run_hackathon_demo.sh
docs/: index.md
models/: ml_vol_predictor.pkl
neo_contract/: DEPLOYMENT_READY.txt  DEPLOY_NOW.md  DEVELOPMENT_GUIDE.md  FINAL_DEPLOYMENT_GUIDE.py  NEO_DEPLOYMENT_PROOF.json  README.md  compile.py  deploy.py  deploy_contract.py  deploy_contracts.py  (+26 more)
ocaml-engine/: README.md  dune-project
ocaml-engine/lib/: advanced_volatility.ml  dune  volatility.ml
(+92 files in other folders)
